--- a/code_build.ipynb
+++ b/code_build.ipynb
@@ -56,6 +56,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "5267556a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -qU langchain-groq"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "b71ad53a",
    "metadata": {},
@@ -122,8 +132,304 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a3ced006",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_groq import ChatGroq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3a5c8903",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatGroq(\n",
+    "    model=\"openai/gpt-oss-120b\",\n",
+    "    temperature=0,\n",
+    "    stop=None,\n",
+    "    max_tokens=None,\n",
+    "    reasoning_format=\"parsed\",\n",
+    "    timeout=None,\n",
+    "    max_retries=2,\n",
+    "    # other params...\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c1703993",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='That’s music to a coder’s ears! 🎶💻  \\nWhether you’re whispering sweet nothings to Python, flirting with JavaScript, or serenading C++, the world’s a better place when you’re in love with those curly braces and endless loops.  \\n\\nGot a favorite language, a quirky bug‑story, or a “I‑just‑wrote‑the‑perfect‑function” moment you want to brag about? I’m all ears (and semicolons). 😎✨', additional_kwargs={'reasoning_content': 'The user says \"I love programming.\" We should respond in a fun and witty manner, acknowledging their love for programming. Possibly ask about languages, share a joke, etc. Keep tone fun and witty.'}, response_metadata={'token_usage': {'completion_tokens': 154, 'prompt_tokens': 91, 'total_tokens': 245, 'completion_time': 0.330877412, 'completion_tokens_details': {'reasoning_tokens': 42}, 'prompt_time': 0.003551379, 'prompt_tokens_details': None, 'queue_time': 0.166824317, 'total_time': 0.334428791}, 'model_name': 'openai/gpt-oss-120b', 'system_fingerprint': 'fp_626f3fc5e0', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None, 'model_provider': 'groq'}, id='lc_run--019c008f-e197-7451-9bc9-01b3fec968fe-0', tool_calls=[], invalid_tool_calls=[], usage_metadata={'input_tokens': 91, 'output_tokens': 154, 'total_tokens': 245, 'output_token_details': {'reasoning': 42}})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "messages = [\n",
+    "    (\n",
+    "        \"system\",\n",
+    "        \"You are a helpful assistant. You use fun and witty responses.\",\n",
+    "    ),\n",
+    "    (\"human\", \"I love programming.\"),\n",
+    "]\n",
+    "ai_msg = llm.invoke(messages)\n",
+    "ai_msg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1a0e4b75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That’s music to a coder’s ears! 🎶💻  \n",
+      "Whether you’re whispering sweet nothings to Python, flirting with JavaScript, or serenading C++, the world’s a better place when you’re in love with those curly braces and endless loops.  \n",
+      "\n",
+      "Got a favorite language, a quirky bug‑story, or a “I‑just‑wrote‑the‑perfect‑function” moment you want to brag about? I’m all ears (and semicolons). 😎✨\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ai_msg.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8e54a74f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "opendatalab 0.0.10 requires pycryptodome, which is not installed.\n",
+      "streamlit 1.32.0 requires protobuf<5,>=3.20, but you have protobuf 5.29.1 which is incompatible.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install -qU duckduckgo-search langchain-community"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1d9ea377",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"In February 1981, Obama made his first public speech, calling for Occidental to participate in the disinvestment from South Africa in response to ... ... searching our database we found 1 possible solution for the: ... The solution we have for President Obama ' s first name has a total of 6 letters. According to the BBC , Odinga claims Obama as a first cousin.) We should eschew guilt by association, but the echoes resound. For many, the name was exotic, signifying a kind of transformation of the customary, the core of Obama ’ s schtick which brought us to the brink of ... Oh did we mention that Dorne Ayers Wif got Michille Obamas Wife her first Job at a Law Firm in Chicago and the whole Bunch lives in the same ...\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_community.tools import DuckDuckGoSearchRun\n",
+    "\n",
+    "search = DuckDuckGoSearchRun()\n",
+    "\n",
+    "search.invoke(\"Obama's first name?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b7d15858",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "opendatalab 0.0.10 requires pycryptodome, which is not installed.\n",
+      "streamlit 1.32.0 requires protobuf<5,>=3.20, but you have protobuf 5.29.1 which is incompatible.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -Uq ddgs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "10f86ea2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"snippet: 1 week ago - Barack Hussein Obama II (born August 4, 1961) is an American politician who served as the 44th president of the United States from 2009 to 2017. A member of the Democratic Party, he was the first African American president. Obama previously served as a U.S. senator representing Illinois from ..., title: Barack Obama - Wikipedia, link: https://en.wikipedia.org/wiki/Barack_Obama, snippet: 16 hours ago - Barack Obama's tenure as the 44th president of the United States began with his first inauguration on January 20, 2009, and ended on January 20, 2017. Obama, a Democrat from Illinois, took office after defeating the Republican nominee John McCain in the 2008 presidential election., title: Presidency of Barack Obama - Wikipedia, link: https://en.wikipedia.org/wiki/Presidency_of_Barack_Obama, snippet: 3 days ago - Michelle LaVaughn Robinson Obama (née Robinson; born January 17, 1964) is an American attorney and author who served as First Lady of the United States from 2009 to 2017 as the wife of Barack Obama, the 44th president of the United States., title: Michelle Obama - Wikipedia, link: https://en.wikipedia.org/wiki/Michelle_Obama, snippet: The allegations of Barack Obama spying on Donald Trump encompass claims that the Obama administration engaged in or oversaw unauthorized..., title: Allegations of Barack Obama spying on Donald Trump, link: https://grokipedia.com/page/Allegations_of_Barack_Obama_spying_on_Donald_Trump\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_community.tools import DuckDuckGoSearchResults\n",
+    "\n",
+    "search = DuckDuckGoSearchResults()\n",
+    "\n",
+    "search.invoke(\"Obama\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e9350bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0463c4bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "037400a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55fb1e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e466f66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d9bc4c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30f1cf44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1884387f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94e93d29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5af82ba9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50d83378",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2c37575",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeac5a53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4f06ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5d2ed40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "731cd069",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -140,13 +446,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "102e1ca0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "opendatalab 0.0.10 requires pycryptodome, which is not installed.\n",
+      "autogluon-core 1.2 requires scikit-learn<1.5.3,>=1.4.0, but you have scikit-learn 1.6.0 which is incompatible.\n",
+      "autogluon-multimodal 1.2 requires scikit-learn<1.5.3,>=1.4.0, but you have scikit-learn 1.6.0 which is incompatible.\n",
+      "autogluon-tabular 1.2 requires scikit-learn<1.5.3,>=1.4.0, but you have scikit-learn 1.6.0 which is incompatible.\n",
+      "streamlit 1.32.0 requires protobuf<5,>=3.20, but you have protobuf 5.29.1 which is incompatible.\n"
+     ]
+    }
+   ],
    "source": [
     "# Install LangChain dependencies\n",
     "!pip install langchain langchain-community langchain-core python-dotenv -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "52ecebf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'create_react_agent' from 'langchain.agents' (c:\\Users\\varun\\anaconda3\\Lib\\site-packages\\langchain\\agents\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tool\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Tool\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01magents\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_react_agent, AgentExecutor\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m hub\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_groq\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChatGroq\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'create_react_agent' from 'langchain.agents' (c:\\Users\\varun\\anaconda3\\Lib\\site-packages\\langchain\\agents\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.tools import tool\n",
+    "from langchain_core.tools import Tool\n",
+    "from langchain.agents import create_react_agent, AgentExecutor\n",
+    "from langchain import hub\n",
+    "from langchain_groq import ChatGroq"
    ]
   },
   {
